# everr

./: .dockerignore  .eslintrc.cjs  .fallowrc.jsonc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  TASKS.md  TODO.md  app.config.ts  biome.json  components.json  docker-compose.yaml  handler.ts  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  skills-lock.json  tailwind.config.ts  trpc.d.ts  tsconfig.json  turbo.json  vitest.config.ts
crates/everr-core/: Cargo.toml
crates/everr-core/assets/: assistant-instructions.md  discovery-instructions.md  telemetry-instructions.md
crates/everr-core/assets/skills/ci-debugging/: SKILL.md
crates/everr-core/assets/skills/everr-ci-debugging/: SKILL.md
crates/everr-core/assets/skills/everr-local-debugging/: SKILL.md
crates/everr-core/assets/skills/everr-local-telemetry-setup/: SKILL.md
crates/everr-core/assets/skills/everr-setup-telemetry/: SKILL.md
crates/everr-core/assets/skills/everr-use-telemetry/: SKILL.md
crates/everr-core/assets/skills/everr-working-with-ci/: SKILL.md
crates/everr-core/src/: api.rs  assistant.rs  auth.rs  build.rs  collector.rs  datemath.rs  git.rs  lib.rs  notifier.rs  skills.rs  state.rs  state_watcher.rs
crates/everr-core/tests/: docs_sync.rs  skills.rs
everr-cli/: .env.prod.example  Cargo.toml  build.rs  justfile
everr-cli/assets/: assistant-instructions.md
everr-cli/src/: api.rs  assistant.rs  auth.rs  cli.rs  core.rs  daemon.rs  install.rs  main.rs  notifications.rs  notify.rs  uninstall.rs
everr-cli/tests/: api_commands.rs  assistant_commands.rs  auth_commands.rs  connect_command.rs  context_command.rs  help_output.rs
everr-cli/tests/support/: mod.rs
(+496 files in other folders)
