[package]
name = "everr-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "everr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0.16"
mockito = "1.7.0"
predicates = "3.1.3"
tempfile = "3.18.0"
