[package]
name = "everr-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
futures-util = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["time"] }

[dev-dependencies]
tempfile = "3.18.0"
